fixed whole topic related paths
